@@ -1,8 +1,8 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-fastLm <- function(Xs, ys) {
-    .Call('RcppGSL_fastLm', PACKAGE = 'RcppGSL', Xs, ys)
+fastLm <- function(X, y) {
+    .Call('RcppGSL_fastLm', PACKAGE = 'RcppGSL', X, y)
 }
 
 gslSetErrorHandlerOff <- function() {
